# api_interface

./: .gitignore  api.py  auth.py  main.py  pyproject.toml  requirements.txt
src/wlogs/: __init__.py  main.py
src/wlogs/commands/: __init__.py  batch.py  count.py  new_project.py  new_scene.py  plot.py  session.py  update_project.py
src/wlogs/commands/project/: __init__.py  new_project.py  update_project.py
src/wlogs/commands/setup/: config.py
src/wses/: __init__.py  main.py
src/wses/commands/: __init__.py  auth.py  batch.py  new_scene.py  plot.py  run.py  update_project.py  utils.py
src/wses/commands/api/: __init__.py
src/wses/commands/api/batch_post/: __init__.py  projects.py  scenes.py  sessions.py  sync.py  utils.py
src/wses/commands/api/batch_post/sync/: __init__.py  list.py  sync.py
src/wses/commands/api/projects/: __init__.py  list.py  projects.py
src/wses/commands/api/scenes/: create_scene.py  scene.py  scenes_by_project.py
src/wses/commands/api/sessions/: __init__.py  create_session.py  list_sessions.py  run.py
src/wses/commands/batch_post/: __init__.py  projects.py  scenes.py  sessions.py  sync.py  utils.py
src/wses/commands/file/: scenes.py  search.py  utils.py
src/wses/commands/projects/: __init__.py  api.py  list.py  projects.py
src/wses/commands/scenes/: __init__.py  create_scene.py  scene.py  scenes_by_project.py  update.py
src/wses/commands/sessions/: __init__.py  create_session.py  list_sessions.py  run.py
src/wses/commands/setup/: config.py
